--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="logo">
-        <img src="ReelChoice_Logo.jpg" alt="ReelChoice Logo">
+        <img src="ReelChoice_Logo.png" alt="ReelChoice Logo">
     </div>
 
     <div class="login-container">
