--- a/index.html
+++ b/index.html
@@ -2,45 +2,36 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ReelChoice - Sign In</title>
-    <link rel="stylesheet" href="index.css">
-    <script src="index.js" defer></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sign In</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-    <div class="logo">
-        <img src="ReelChoice_Logo.png" alt="ReelChoice Logo">
-    </div>
-
-    <div class="login-container">
-        <h2>Sign in</h2>
-
-        <form id="loginForm">
+    <div class="container">
+        <div class="logo">
+            <div class="logo-icon"></div>
+        </div>
+        <form class="signin-form">
+            <h1>Sign in</h1>
             <label for="email">Email</label>
             <input type="email" id="email" placeholder="your@email.com" required>
-
-            <div class="password-container">
-                <label for="password">Password</label>
+            <label for="password">Password</label>
+            <input type="password" id="password" placeholder="••••••••" required>
+            <div class="forgot-password">
                 <a href="#">Forgot your password?</a>
+                <label>
+                    <input type="checkbox"> Remember me
+                </label>
             </div>
-
-            <input type="password" id="password" required>
-
-            <div class="remember-me">
-                <input type="checkbox" id="remember">
-                <label for="remember">Remember me</label>
+            <button type="submit" class="btn-primary">Sign in</button>
+            <div class="signup-prompt">
+                <p>Don't have an account? <a href="#">Sign up</a></p>
             </div>
-
-            <button type="submit" class="signin-btn">Sign in</button>
+            <div class="social-signin">
+                <button class="btn-google">Sign in with Google</button>
+                <button class="btn-facebook">Sign in with Facebook</button>
+            </div>
         </form>
-
-        <p>Don't have an account? <a href="#">Sign up</a></p>
-
-        <div class="divider">or</div>
-
-        <button class="google-btn">Sign in with Google</button>
-        <button class="facebook-btn">Sign in with Facebook</button>
     </div>
-
 </body>
 </html>
