--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sign In</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="container">
+        <div class="logo">
+            <div class="logo-icon"></div>
+        </div>
+        <form class="signin-form">
+            <h1>Sign in</h1>
+            <label for="email">Email</label>
+            <input type="email" id="email" placeholder="your@email.com" required>
+            <label for="password">Password</label>
+            <input type="password" id="password" placeholder="••••••••" required>
+            <div class="forgot-password">
+                <a href="#">Forgot your password?</a>
+                <label>
+                    <input type="checkbox"> Remember me
+                </label>
+            </div>
+            <button type="submit" class="btn-primary">Sign in</button>
+            <div class="signup-prompt">
+                <p>Don't have an account? <a href="#">Sign up</a></p>
+            </div>
+            <div class="social-signin">
+                <button class="btn-google">Sign in with Google</button>
+                <button class="btn-facebook">Sign in with Facebook</button>
+            </div>
+        </form>
+    </div>
+</body>
+</html>
