--- a/index.html
+++ b/index.html
@@ -4,42 +4,47 @@
     <meta charset="UTF-8">
     <title>ReelChoice - Sign In</title>
     <link rel="stylesheet" href="index.css">
-    <script src="index.js" defer></script>
 </head>
 <body>
-
-    <div class="logo">
+    <div class="center-container">
+        <div class="logo">
         <img src="ReelChoice_Logo.png" alt="ReelChoice Logo">
     </div>
 
-    <div class="login-container">
-        <h2>Sign in</h2>
+        <div class="login-container">
+            <h2>Sign in</h2>
+            <form id="loginForm">
+                <label for="email">Email</label>
+                <input type="email" id="email" placeholder="your@email.com" required>
 
-        <form id="loginForm">
-            <label for="email">Email</label>
-            <input type="email" id="email" placeholder="your@email.com" required>
+                <div class="password-container">
+                    <label for="password">Password</label>
+                    <a href="#">Forgot your password?</a>
+                </div>
+                <input type="password" id="password" required>
 
-            <div class="password-container">
-                <label for="password">Password</label>
-                <a href="#">Forgot your password?</a>
-            </div>
-            <input type="password" id="password" required>
+                <div class="remember-me">
+                    <input type="checkbox" id="remember">
+                    <span class="custom-checkbox"></span>
+                    <label for="remember">Remember me</label>
+                </div>
 
-            <div class="remember-me">
-                <input type="checkbox" id="remember">
-                <label for="remember">Remember me</label>
-            </div>
+                <button type="submit" class="signin-btn">Sign in</button>
+            </form>
 
-            <button type="submit" class="signin-btn">Sign in</button>
-        </form>
+            <p class="signup-text">Don't have an account? <a href="#">Sign up</a></p>
 
-        <p>Don't have an account? <a href="#">Sign up</a></p>
+            <div class="divider">or</div>
 
-        <div class="divider">or</div>
-
-        <button class="google-btn">Sign in with Google</button>
-        <button class="facebook-btn">Sign in with Facebook</button>
+            <button class="google-btn">
+                <span class="icon"><img src="https://img.icons8.com/color/16/000000/google-logo.png"/></span>
+                Sign in with Google
+            </button>
+            <button class="facebook-btn">
+                <span class="icon"><img src="https://img.icons8.com/color/16/000000/facebook-new.png"/></span>
+                Sign in with Facebook
+            </button>
+        </div>
     </div>
-
 </body>
 </html>
