--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div class="center-container">
+    <div class="logo-container">
         <div class="logo">
             <img src="ReelChoice_Logo.png" alt="ReelChoice Logo">
         </div>
+    </div>
 
+    <div class="center-container">
         <div class="login-container">
             <h2>Sign in</h2>
             <form id="loginForm">
