--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <!-- Logo container at the top -->
     <div class="logo-container">
         <div class="logo">
             <img src="ReelChoice_Logo.png" alt="ReelChoice Logo">
         </div>
     </div>
 
+    <!-- Center container with login form -->
     <div class="center-container">
         <div class="login-container">
             <h2>Sign in</h2>
@@ -48,6 +50,7 @@
             </button>
         </div>
     </div>
-       <script src="index.js"></script>
+
+    <script src="index.js"></script>
 </body>
 </html>
