--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <label for="password">Password</label>
                     <a href="#">Forgot your password?</a>
                 </div>
-                <input type="password" id="password" required>
+                <input type="password" id="password" placeholder="● ● ● ● ● ●" required>
 
                 <div class="remember-me">
                     <input type="checkbox" id="remember">
