--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
 
     <div class="title-image">
-      <img src="reelchoiceword.png" alt="ReeLChoice Text Logo">
+      <img src="reelchoiceword.png" alt="ReelChoice Text Logo">
     </div>
 
     <div class="buttons">
