--- a/index.html
+++ b/index.html
@@ -14,6 +14,22 @@
     <div class="bar"></div>
   </div>
 
+  <div class="side-menu" id="sideMenu">
+  <ul>
+    <li><a href="#">Movies</a></li>
+    <li><a href="#">TV Series</a></li>
+    <li><a href="#">My Profile</a></li>
+    <li><a href="#">My Reviews</a></li>
+    <li><a href="#">My Reel Roll</a></li>
+    <li><a href="#">Settings</a></li>
+  </ul>
+  <div class="menu-footer">
+    <img src="ReelChoice_Logo.png" alt="ReelChoice Logo">
+    <span><span style="color:#ff007f;">ReeL</span><span style="color:#f0b500;">Choice</span></span>
+  </div>
+</div>
+
+
   <div class="auth-buttons">
     <button onclick="location.href='signin.html'">LOGIN</button>
     <button>SIGN UP</button>
