--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </div>
 
   <div class="side-menu" id="sideMenu">
+    <div class="close-menu" onclick="closeMenu()"></div>
   <ul>
     <li><a href="#">Movies</a></li>
     <li><a href="#">TV Series</a></li>
