--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   </div>
 
   <div class="side-menu" id="sideMenu">
-    <div class="close-menu" onclick="closeMenu()"></div>
+  <div class="back-button" onclick="closeMenu()">
+  <img src="back-icon.png" alt="Back" />
+</div>
   <ul>
     <li><a href="#">Movies</a></li>
     <li><a href="#">TV Series</a></li>
