--- a/signin.html
+++ b/signin.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" href="signin.css">
 </head>
 <body>
+    <!-- Back icon (top-left corner) -->
+    <div class="back-icon" onclick="goBack()">
+        <img src="back-icon2.png" alt="Back">
+    </div>
+
     <!-- Logo container at the top -->
     <div class="logo-container">
         <div class="logo">
@@ -51,6 +56,6 @@
         </div>
     </div>
 
-    <script src="signin".js"></script>
+    <script src="signin.js"></script>
 </body>
 </html>
