--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
   <div class="auth-buttons">
     <button onclick="location.href='signin.html'">LOGIN</button>
-    <button>SIGN UP</button>
+    <button onclick="location.href='signup.html'">SIGN UP</button>
   </div>
 
   <div class="container">
