--- a/signup.html
+++ b/signup.html
@@ -24,6 +24,12 @@
         <div class="login-container">
             <h2>Sign up</h2>
             <form id="signupForm">
+                <label for="firstName">First Name</label>
+                <input type="text" id="firstName" placeholder="First Name" required>
+
+                <label for="lastName">Last Name</label>
+                <input type="text" id="lastName" placeholder="Last Name" required>
+
                 <label for="newEmail">Email</label>
                 <input type="email" id="newEmail" placeholder="your@email.com" required>
 
@@ -35,8 +41,6 @@
 
                 <button type="submit" class="signin-btn">Sign up</button>
             </form>
-
-            <p class="signup-text">Already have an account? <a href="index.html">Sign in</a></p>
 
             <div class="divider">or</div>
 
