--- a/signup.html
+++ b/signup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>ReelChoice - Sign Up</title>
-    <link rel="stylesheet" href="signin.css"> <!-- Reuse login CSS -->
+    <link rel="stylesheet" href="signup.css">
 </head>
 <body>
 
