--- a/signin.html
+++ b/signin.html
@@ -41,7 +41,7 @@
                 <button type="submit" class="signin-btn">Sign in</button>
             </form>
 
-            <p class="signup-text">Don't have an account? <a href="#">Sign up</a></p>
+            <p class="signup-text">Don't have an account? <a href="signup.html">Sign up</a></p>
 
             <div class="divider">or</div>
 
