Updated profile page

--- a/profile/profile.html
+++ b/profile/profile.html
@@ -3,8 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ReelChoice Profile</title>
+    <title>Profile</title>
     <link rel="stylesheet" href="profile.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
@@ -40,9 +48,9 @@
       <h1 class="title">My Profile</h1>
       <section class="profile-card">
         <div class="profile-info">
-          <img src="images/kurasmag.jpg" alt="Profile" class="avatar" />
+          <img src="images/profile.jpg" alt="Profile" class="avatar" />
           <div class="user-details">
-            <h2>@kurasmag</h2>
+            <h2>@noirdusk</h2>
             <button class="edit-btn">Edit Profile</button>
           </div>
           <div class="stats">
@@ -57,24 +65,24 @@
           <h3>Get to know me with these 5 movies:</h3>
           <div class="movie-grid">
             <div class="movie">
-              <img src="images/mike.jpg" alt="Mickey 17" />
-              <p>Mickey 17</p>
+              <img src="images/bswan.jpg" alt="Mickey 17" />
+              <p>Black Swan</p>
             </div>
             <div class="movie">
-              <img src="images/anoraw.jpg" alt="Anora" />
-              <p>Anora</p>
+              <img src="images/midsommar.jpg" alt="Anora" />
+              <p>Midsommar</p>
             </div>
             <div class="movie">
-              <img src="images/flu.jpg" alt="Flow" />
-              <p>Flow</p>
+              <img src="images/ladybird.jpg" alt="Flow" />
+              <p>Ladybird</p>
             </div>
             <div class="movie">
-              <img src="images/nosferatu.jpg" alt="Nosferatu" />
-              <p>Nosferatu</p>
+              <img src="images/pulpfic.jpg" alt="Nosferatu" />
+              <p>Pulp Fiction</p>
             </div>
             <div class="movie">
-              <img src="images/companion.jpg" alt="Companion" />
-              <p>Companion</p>
+              <img src="images/mother.jpg" alt="Companion" />
+              <p>Mother</p>
             </div>
           </div>
         </div>
@@ -84,24 +92,24 @@
         <h3>Friends</h3>
         <div class="friends">
           <div class="friend">
-            <img src="https://placekitten.com/80/80" alt="" />
-            <p>@goldenr</p>
+            <img src="images/p1.jpg" alt="" />
+            <p>@bluelens</p>
           </div>
           <div class="friend">
-            <img src="https://placekitten.com/81/80" alt="" />
-            <p>@englishera</p>
+            <img src="images/p2.jpg" alt="" />
+            <p>@velvia</p>
           </div>
           <div class="friend">
-            <img src="https://placekitten.com/82/80" alt="" />
-            <p>@sololeveling</p>
+            <img src="images/p3.jpg" alt="" />
+            <p>@aesthys</p>
           </div>
           <div class="friend">
-            <img src="https://placekitten.com/83/80" alt="" />
-            <p>@familyoriented</p>
+            <img src="images/p4.jpg" alt="" />
+            <p>@grainii</p>
           </div>
           <div class="friend">
-            <img src="https://placekitten.com/84/80" alt="" />
-            <p>@pusuan</p>
+            <img src="images/p5.jpg" alt="" />
+            <p>@fraem</p>
           </div>
         </div>
       </section>
@@ -110,24 +118,24 @@
         <h3>Favorites</h3>
         <div class="movie-grid">
           <div class="movie">
-            <img src="images/mike.jpg" alt="Mickey 17" />
-            <p>Mickey 17</p>
+            <img src="images/mononoke.jpg" alt="Mickey 17" />
+            <p>Princess Mononoke</p>
           </div>
           <div class="movie">
-            <img src="images/anoraw.jpg" alt="Anora" />
-            <p>Anora</p>
+            <img src="images/fall.jpg" alt="Anora" />
+            <p>Anatomy of a Fall</p>
           </div>
           <div class="movie">
-            <img src="images/flu.jpg" alt="Flow" />
-            <p>Flow</p>
+            <img src="images/tonya.jpg" alt="Flow" />
+            <p>I, Tonya</p>
           </div>
           <div class="movie">
-            <img src="images/nosferatu.jpg" alt="Nosferatu" />
-            <p>Nosferatu</p>
+            <img src="images/substance.jpg" alt="Nosferatu" />
+            <p>The Substance</p>
           </div>
           <div class="movie">
-            <img src="images/companion.jpg" alt="Companion" />
-            <p>Companion</p>
+            <img src="images/poor.jpg" alt="Companion" />
+            <p>Poor Things</p>
           </div>
         </div>
       </section>
