Organize file hierarchy

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <div class="side-menu" id="sideMenu">
   <div class="back-button" onclick="closeMenu()">
-  <img src="back-icon.png" alt="Back" />
+  <img src="images/back-icon.png" alt="Back" />
 </div>
   <ul>
     <li><a href="#">Movies</a></li>
@@ -27,24 +27,24 @@
     <li><a href="#">Settings</a></li>
   </ul>
   <div class="menu-footer">
-    <img src="ReelChoice_Logo.png" alt="ReelChoice Logo">
+    <img src="images/ReelChoice_Logo.png" alt="ReelChoice Logo">
     <span><span style="color:#ff007f;">ReeL</span><span style="color:#f0b500;">Choice</span></span>
   </div>
 </div>
 
 
   <div class="auth-buttons">
-    <button onclick="location.href='signin.html'">LOGIN</button>
-    <button onclick="location.href='signup.html'">SIGN UP</button>
+    <button onclick="location.href='signin/signin.html'">LOGIN</button>
+    <button onclick="location.href='signup/signup.html'">SIGN UP</button>
   </div>
 
   <div class="container">
     <div class="logo-image">
-      <img src="ReelChoice_Logo.png" alt="ReelChoice Logo">
+      <img src="images/ReelChoice_Logo.png" alt="ReelChoice Logo">
     </div>
 
     <div class="title-image">
-      <img src="reelchoiceword.png" alt="ReeLChoice Text Logo">
+      <img src="images/reelchoiceword.png" alt="ReeLChoice Text Logo">
     </div>
 
     <div class="buttons">
