--- a/signup/signup.html
+++ b/signup/signup.html
@@ -9,13 +9,13 @@
 
     <!-- Back icon -->
     <div class="back-icon" onclick="goBack()">
-        <img src="back-icon2.png" alt="Back">
+        <img src="../images/back-icon2.png" alt="Back">
     </div>
 
     <!-- Logo container -->
     <div class="logo-container">
         <div class="logo">
-            <img src="ReelChoice_Logo.png" alt="ReelChoice Logo">
+            <img src="../images/ReelChoice_Logo.png" alt="ReelChoice Logo">
         </div>
     </div>
 
