Add review page
+ Organized and updated some files

--- a/profile/profile.html
+++ b/profile/profile.html
@@ -35,8 +35,8 @@
         <li><a href="#">Movies</a></li>
         <li><a href="#">TV Series</a></li>
         <li><a href="#">My Profile</a></li>
-        <li><a href="#">My Reviews</a></li>
-        <li><a href="#">My Reel Roll</a></li>
+        <li><a href="../reviews/reviews.html">My Reviews</a></li>
+        <li><a href="../reel-roll/reel-roll.html">My Reel Roll</a></li>
         <li><a href="#">Settings</a></li>
       </ul>
       <div class="menu-footer">
@@ -48,7 +48,7 @@
       <h1 class="title">My Profile</h1>
       <section class="profile-card">
         <div class="profile-info">
-          <img src="images/profile.jpg" alt="Profile" class="avatar" />
+          <img src="../images/profile.jpg" alt="Profile" class="avatar" />
           <div class="user-details">
             <h2>@noirdusk</h2>
             <button class="edit-btn">Edit Profile</button>
@@ -65,24 +65,24 @@
           <h3>Get to know me with these 5 movies:</h3>
           <div class="movie-grid">
             <div class="movie">
-              <img src="images/bswan.jpg" alt="Mickey 17" />
+              <img src="../images/posters/bswan.jpg" alt="Black Swan" />
               <p>Black Swan</p>
             </div>
             <div class="movie">
-              <img src="images/midsommar.jpg" alt="Anora" />
+              <img src="../images/posters/midsommar.jpg" alt="Midsommar" />
               <p>Midsommar</p>
             </div>
             <div class="movie">
-              <img src="images/ladybird.jpg" alt="Flow" />
-              <p>Ladybird</p>
+              <img src="../images/posters/ladybird.jpg" alt="Ladybird" />
+              <p>Lady Bird</p>
             </div>
             <div class="movie">
-              <img src="images/pulpfic.jpg" alt="Nosferatu" />
+              <img src="../images/posters/pulpfic.jpg" alt="Pulp Fiction" />
               <p>Pulp Fiction</p>
             </div>
             <div class="movie">
-              <img src="images/mother.jpg" alt="Companion" />
-              <p>Mother</p>
+              <img src="../images/posters/mother.jpg" alt="Mother" />
+              <p>Mother!</p>
             </div>
           </div>
         </div>
@@ -118,23 +118,23 @@
         <h3>Favorites</h3>
         <div class="movie-grid">
           <div class="movie">
-            <img src="images/mononoke.jpg" alt="Mickey 17" />
+            <img src="../images/posters/mononoke.jpg" alt="Princess Mononoke" />
             <p>Princess Mononoke</p>
           </div>
           <div class="movie">
-            <img src="images/fall.jpg" alt="Anora" />
+            <img src="../images/posters/fall.jpg" alt="Anatomy of a Fall" />
             <p>Anatomy of a Fall</p>
           </div>
           <div class="movie">
-            <img src="images/tonya.jpg" alt="Flow" />
+            <img src="../images/posters/tonya.jpg" alt="I, Tonya" />
             <p>I, Tonya</p>
           </div>
           <div class="movie">
-            <img src="images/substance.jpg" alt="Nosferatu" />
+            <img src="../images/posters/substance.jpg" alt="The Substance" />
             <p>The Substance</p>
           </div>
           <div class="movie">
-            <img src="images/poor.jpg" alt="Companion" />
+            <img src="../images/posters/poor.jpg" alt="Poor Things" />
             <p>Poor Things</p>
           </div>
         </div>
@@ -144,23 +144,23 @@
         <h3>Recently Watched</h3>
         <div class="movie-grid">
           <div class="movie">
-            <img src="images/mike.jpg" alt="Mickey 17" />
+            <img src="../images/posters/mike.jpg" alt="Mickey 17" />
             <p>Mickey 17</p>
           </div>
           <div class="movie">
-            <img src="images/anoraw.jpg" alt="Anora" />
+            <img src="../images/posters/anoraw.jpg" alt="Anora" />
             <p>Anora</p>
           </div>
           <div class="movie">
-            <img src="images/flu.jpg" alt="Flow" />
+            <img src="../images/posters/flu.jpg" alt="Flow" />
             <p>Flow</p>
           </div>
           <div class="movie">
-            <img src="images/nosferatu.jpg" alt="Nosferatu" />
+            <img src="../images/posters/nosferatu.jpg" alt="Nosferatu" />
             <p>Nosferatu</p>
           </div>
           <div class="movie">
-            <img src="images/companion.jpg" alt="Companion" />
+            <img src="../images/posters/companion.jpg" alt="Companion" />
             <p>Companion</p>
           </div>
         </div>
